[Add] Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fb5b3ae4504f483f8a77f9d83d215c9c"}'></script><!-- End Cloudflare Web Analytics -->
 </html>
